--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
     "node": ">=16"
   },
   "scripts": {
-    "build": "rm -rf lib && tsc"
+    "build": "rm -rf lib && tsc",
+    "process:clean": "sqd down && sqd up && sqd process"
   },
   "dependencies": {
     "@belopash/squid-tools": "^0.1.1",
-    "@subsquid/archive-registry": "3.1.0",
     "@subsquid/graphql-server": "4.2.0",
     "@subsquid/ss58": "1.2.0",
     "@subsquid/substrate-processor": "^3.3.0",
