--- a/.env
+++ b/.env
@@ -3,5 +3,5 @@ DB_PASS=squid
 DB_PORT=23798
 PROCESSOR_PROMETHEUS_PORT=3000
 GQL_PORT=4350
-CHAIN=altair
-ARCHIVE=https://squid-archive-altair.squid.tachi.soramitsu.co.jp/graphql
+CHAIN=darwinia
+ARCHIVE=https://squid-archive-darwinia.squid.tachi.soramitsu.co.jp/graphql
