--- a/package.json
+++ b/package.json
@@ -9,14 +9,15 @@
     "process:clean": "sqd down && sqd up && sqd process"
   },
   "dependencies": {
-    "@belopash/squid-tools": "^0.1.1",
+    "@belopash/typeorm-store": "1.5.0",
     "@subsquid/graphql-server": "4.2.0",
     "@subsquid/ss58": "1.2.0",
     "@subsquid/substrate-processor": "^3.3.0",
     "@subsquid/typeorm-migration": "1.2.0",
     "@subsquid/typeorm-store": "1.2.1",
+    "@subsquid/typeorm-config": "4.1.1",
     "dotenv": "^16.0.0",
-    "pg": "8.10.0",
+    "pg": "8.11.3",
     "typeorm": "0.3.16"
   },
   "devDependencies": {
